# llm_router

./: .env.example  .gitignore  Dockerfile.worker-cuda  Dockerfile.worker-cuda-multigpu  Dockerfile.worker-vllm  Dockerfile.worker-vllm-multigpu  README.md  app.py  config_loading.py  env_utils.py  llama_worker.py  llm_config.py  modal_connection_store.py  modal_openai_server.py  modal_probe_qwen36.py  modal_probe_vllm_image.py  modal_worker.py  modal_worker_store.py  paths.py  pyproject.toml  ui_app.py  vast_instance_store.py  vllm_worker.py  worker-entrypoint.sh  worker_multi_gpu.py  worker_multi_gpu_vllm.py  worker_registry.py  worker_request_queue.py  worker_store.py
configs/: LLM.yaml
dashboard/: jobs.py  llm_router.py  llm_router_store.py  router_request_store.py
patterns/: paths.py
scripts/: launch_vllm_worker.sh
static/: router.css  router_autosubmit.js
templates/: _router_endpoints.html  _router_live.html  _router_modal.html  _router_public_access.html  _router_requests_panel.html  _router_stats.html  _router_summary.html  _router_vast.html  _router_workers.html  error_detail.html  errors.html  index.html  request_detail.html
tests/: test_llama_worker.py  test_pull_worker_flow.py  test_router_metrics.py  test_router_payload_normalization.py  test_router_request_log.py  test_router_ui_api.py  test_router_ui_requests.py  test_routing_priority.py  test_vllm_worker.py  test_worker_multi_gpu.py  test_worker_multi_gpu_vllm.py  test_worker_registry.py  test_worker_usage.py
